--- a/Ctrl+C/index.html
+++ b/Ctrl+C/index.html
@@ -87,7 +87,7 @@ https://templatemo.com/tm-568-digimedia
                 <div class="row">
                   <div class="col-lg-12">
                     <h2 style="color: white;">CTRL + C</h2>
-                    <p style="font-size:larger;color: aliceblue;">Greetings, fellow coders, tech enthusiasts, and aficionados of algorithmic prowess! The Department of Computer Science and Engineering (CSE-C) is thrilled to welcome you to an exhilarating journey through the realm of binary brilliance at the CodeSphere Challenge!</p>
+                    <p style="font-size:larger;color: aliceblue;">Greetings, fellow coders, tech enthusiasts, and aficionados of algorithmic prowess! The Department of Computer Science and Engineering is thrilled to welcome you to an exhilarating journey through the realm of binary brilliance at the CodeSphere Challenge!</p>
                   </div>
                   <div class="col-lg-12">
                     <div class="border-first-button scroll-to-section">
@@ -302,7 +302,7 @@ https://templatemo.com/tm-568-digimedia
               <a href="#">
                 <div class="portfolio-item">
                 <div class="thumb">
-                  <img src="assets/images/portfolio-02.jpg" alt="">
+                  <img src="assets/images/Premium Vector _ Concept design for creative thinking.jpeg" alt="">
                 </div>
                 <div class="down-content">
                   <h4>DAY 1<br>MemeForge</h4>
@@ -315,11 +315,11 @@ https://templatemo.com/tm-568-digimedia
               <a href="#">
                 <div class="portfolio-item">
                 <div class="thumb">
-                  <img src="assets/images/portfolio-03.jpg" alt="">
+                  <img src="assets/images/Premium Vector _ Cute puzzle pieces.jpeg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>Website Builder</h4>
-                  <span>Marketing</span>
+                  <h4>DAY 2<br> Unscramble & Build</h4>
+                  <span>Join us to engage in a unique web development competition where website templates are jumbled. Participants will need to  correct the template structure, and then create HTML and CSS code.</span>
                 </div>
               </div>
               </a>  
@@ -328,11 +328,25 @@ https://templatemo.com/tm-568-digimedia
               <a href="#">
                 <div class="portfolio-item">
                 <div class="thumb">
-                  <img src="assets/images/Free Vector _ Purple background with quiz word and colorful people.jpeg.jpg" alt="">
+                  <img src="assets/images/Modern Eden (2).jpeg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>DAY 1<br>Rapid Fire</h4>
-                  <span>Embark on a quest of knowledge and wit! Join us for an electrifying showdown of brains and brilliance at our thrilling quiz competition where curiosity meets competition, and intelligence is the ultimate key to victory!</span>
+                  <h4>DAY 2<br>Code Venture</h4>
+                  <span>Join us to face a dynamic coding competition where unexpected obstacles are introduced at different stages. The goal is to navigate through these hurdles, adapt quickly, and continue coding to conquer the challenges.</span>
+                </div>
+              </div>
+              </a>  
+            </div>
+            <div class="item">
+              <a href="#">
+                <div class="portfolio-item">
+                <div class="thumb">
+                  <img src="assets/images/escape-the-room-la.jpg" alt="">
+                </div>
+                <div class="down-content">
+                  <h4>DAY 2<br>Escape the Room</h4>
+                  <span>A team of 4 members are locked inside a classroom. Participants must find scattered bits of code puzzles hidden within the room, piece them together, and successfully run the code to unlock clues and ultimately escape the room.
+                  </span>
                 </div>
               </div>
               </a>  
@@ -358,7 +372,7 @@ https://templatemo.com/tm-568-digimedia
             <div class="row">
               <div class="col-lg-12">
                 <div class="contact-dec">
-                  <img src="assets/images/contact-dec.png" alt="">
+                  <img src="" alt="">
                 </div>
               </div>
               <div class="col-lg-5">
@@ -373,8 +387,8 @@ https://templatemo.com/tm-568-digimedia
                       <div class="info-post">
                         <div class="icon">
                           <img src="assets/images/phone-icon.png" alt="">
-                          <a href="tel:919514423000">Contact <br>
-                          CSE C</a>
+                          <a href="tel:9514423000">Contact <br>
+                          </a>
                         </div>
                       </div>
                     </div>
@@ -392,7 +406,7 @@ https://templatemo.com/tm-568-digimedia
                           <img src="assets/images/location-icon.png" alt="">
                           <a href="https://www.google.com/maps/place/SRI+SHAKTHI+INSTITUTE+OF+ENGINEERING+AND+TECHNOLOGY/@11.0402326,77.0716822,17z/data=!3m1!4b1!4m6!3m5!1s0x3ba85851693f4a5d:0x929165d4884224ee!8m2!3d11.0402273!4d77.0742571!16s%2Fm%2F010fd_9h?entry=ttu">Siet<br>
                              LH38
-                          <br><b>CSE - C</b></a>
+                          <br><b></b></a>
                         </div>
                       </div>
                     </div>
