--- a/Ctrl+C/index.html
+++ b/Ctrl+C/index.html
@@ -64,7 +64,7 @@ https://templatemo.com/tm-568-digimedia
               <li class="scroll-to-section"><a href="#about">About</a></li>
               <li class="scroll-to-section"><a href="#portfolio">Events</a></li>
               <li class="scroll-to-section"><a href="#contact">Info</a></li> 
-              <li class="scroll-to-section"><div class="border-first-button"><a href="#contact">Regsiter Now</a></div></li> 
+              <li class="scroll-to-section"><div class="border-first-button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQzD4XlpAed3NbfKxFcMB_6NbnwhWgvByNsEQKqeX2SDxjcg/viewform?usp=sf_link">Regsiter Now</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
@@ -91,7 +91,7 @@ https://templatemo.com/tm-568-digimedia
                   </div>
                   <div class="col-lg-12">
                     <div class="border-first-button scroll-to-section">
-                      <a href="#contact">Register Now</a>
+                      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfQzD4XlpAed3NbfKxFcMB_6NbnwhWgvByNsEQKqeX2SDxjcg/viewform?usp=sf_link">Register Now</a>
                     </div>
                   </div>
                 </div>
@@ -411,9 +411,7 @@ https://templatemo.com/tm-568-digimedia
                       </div>
                     </div>
                     <div class="col-lg-12">
-                      <fieldset>
-                        <button type="submit" id="form-submit" class="main-button ">Register Here</button>
-                      </fieldset>
+                     
                     </div>
                   </div>
                 </div>
