--- a/Ctrl+C/index.html
+++ b/Ctrl+C/index.html
@@ -86,6 +86,8 @@ https://templatemo.com/tm-568-digimedia
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
+                    <h2 style="color: white;font-size:x-large;">Department of Computer Science and Engineering</h2>
+                    <h2 style="color: white;font-size: x-small;">Presents</h2>
                     <h2 style="color: white;">CTRL + C</h2>
                     <p style="font-size:larger;color: aliceblue;">Greetings, fellow coders, tech enthusiasts, and aficionados of algorithmic prowess! The Department of Computer Science and Engineering is thrilled to welcome you to an exhilarating journey through the realm of binary brilliance at the CodeSphere Challenge!</p>
                   </div>
