--- a/Ctrl+C/index.html
+++ b/Ctrl+C/index.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-568-digimedia
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfbrCfDQefpmxp9r4MN9fHuxM1dJE3K16PNkfe0obqHUoeH2Q/viewform?usp=sf_link" class="logo">
               <img src="assets/images/ctrl_logo-removebg-preview.png" height="85" width="100"  alt="" style="position: relative; left: 10px;">
             </a>
             <!-- ***** Logo End ***** -->
